# visor

./: .gitignore  Cargo.toml  README.md  build.ps1
.claude/: settings.local.json
docs/: design.md  gui.md
src/: activity.rs  cli.rs  client.rs  daemon.rs  dashboard.html  fileserver.rs  gui.rs  icons.rs  ipc.rs  job.rs  main.rs  models.rs  process.rs  pty.rs  registry.rs  scanner.rs  supervisor.rs
