[package]
name = "visor"
version = "0.1.0"
edition = "2021"
description = "Windows process supervisor for AI-launched apps"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tiny_http = "0.12"
uuid = { version = "1", features = ["v4"] }
wry = "0.50"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
]

[profile.release]
strip = true
lto = true
